--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,8 @@ body {
     background-color: rgb(29, 30, 32);
   }
 }
+app-root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
