Read the selectedFile's name and display it besides File Opener icon

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <span>Burp HTTP history viewer</span>
 
         <span class="toolbar-spacer"></span>
-
+        <span>{{ this.selectedFileName }}</span>
         <button mat-icon-button aria-label="">
             <mat-icon aria-hidden="false" aria-label="Open File" matTooltip="Open File" (click)="fileInput.click()">
                 file_open
