--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,97 +1,98 @@
-<table mat-table [dataSource]="dataSource" matSort>
+<table mat-table [dataSource]="dataSource" matSort cdkDropList cdkDropListOrientation="horizontal"
+    (cdkDropListDropped)="drop($event)">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> # </th>
         <td mat-cell *matCellDef="let element"> {{element.position}} </td>
     </ng-container>
 
     <!-- host Column -->
     <ng-container matColumnDef="host">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Host </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Host </th>
         <td mat-cell *matCellDef="let element"> {{element.host}} </td>
     </ng-container>
 
     <!-- method Column -->
     <ng-container matColumnDef="method">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Method </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Method </th>
         <td mat-cell *matCellDef="let element"> {{element.method}} </td>
     </ng-container>
 
     <!-- url Column -->
     <ng-container matColumnDef="path">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> URL </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> URL </th>
         <td mat-cell *matCellDef="let element"> {{element.path}} </td>
     </ng-container>
 
     <!-- Params Column -->
     <!-- <ng-container matColumnDef="params">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Params </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Params </th>
         <td mat-cell *matCellDef="let element"> {{element.params}} </td>
     </ng-container> -->
 
     <!-- Edited Column -->
     <!-- <ng-container matColumnDef="edited">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edited </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Edited </th>
         <td mat-cell *matCellDef="let element"> {{element.edited}} </td>
     </ng-container> -->
 
     <!-- Status Column -->
     <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Status </th>
         <td mat-cell *matCellDef="let element"> {{element.status}} </td>
     </ng-container>
 
     <ng-container matColumnDef="responselength">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Length </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Length </th>
         <td mat-cell *matCellDef="let element"> {{element.responselength}} </td>
     </ng-container>
 
     <ng-container matColumnDef="mimetype">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> MIME type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> MIME type </th>
         <td mat-cell *matCellDef="let element"> {{element.mimetype}} </td>
     </ng-container>
 
     <ng-container matColumnDef="extension">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Extension </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Extension </th>
         <td mat-cell *matCellDef="let element"> {{element.extension}} </td>
     </ng-container>
 
     <!-- <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Title </th>
         <td mat-cell *matCellDef="let element"> {{element.title}} </td>
     </ng-container> -->
 
     <ng-container matColumnDef="comment">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Comment </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Comment </th>
         <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
     </ng-container>
 
     <!-- <ng-container matColumnDef="">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> TLS </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> TLS </th>
         <td mat-cell *matCellDef="let element"> {{element.info}} </td>
     </ng-container> -->
 
     <ng-container matColumnDef="ip">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> IP </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> IP </th>
         <td mat-cell *matCellDef="let element"> {{element.ip}} </td>
     </ng-container>
 
     <!-- <ng-container matColumnDef="">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cookies </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Cookies </th>
         <td mat-cell *matCellDef="let element"> {{element.info}} </td>
     </ng-container> -->
 
     <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Time </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Time </th>
         <td mat-cell *matCellDef="let element"> {{element.time}} </td>
     </ng-container>
 
     <ng-container matColumnDef="port">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Listener Port </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Listener Port </th>
         <td mat-cell *matCellDef="let element"> {{element.port}} </td>
     </ng-container>
 
