--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header class="mat-elevation-z6"></app-header> 
-<app-main></app-main> 
+<app-header></app-header>
+<app-main></app-main>
+<app-footer></app-footer>
