Highlight current clicked row

--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -20,6 +20,11 @@ tr.mat-header-row {
   border-right: 1px solid rgba(0, 0, 0, 0.12);
 }
 
+.row-is-clicked,
+.row-is-clicked:hover {
+  background-color: rgba(0, 0, 0, 0.144);
+}
+
 @media (prefers-color-scheme: dark) {
   .mat-table {
     background: 0;
