--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -25,6 +25,12 @@ tr.mat-header-row {
   background-color: rgba(0, 0, 0, 0.144);
 }
 
+as-split > as-split-area > pre {
+  margin: 0;
+  overflow: auto;
+  height: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   .mat-table {
     background: 0;
