Fix `as-split-area` unable to scroll right

--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -31,6 +31,10 @@ as-split > as-split-area > pre {
   height: 100%;
 }
 
+* > .as-split-area {
+  overflow-x: auto;
+}
+
 @media (prefers-color-scheme: dark) {
   .mat-table {
     background: 0;
