--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,11 +4,16 @@
 
         <span class="toolbar-spacer"></span>
         <span>{{ this.selectedFileName }}</span>
-        <button mat-icon-button aria-label="" matTooltip="Open File" (click)="fileInput.click()">
+        <button mat-icon-button aria-label="" matTooltip="Open File" (click)="fileInput.click()" *ngIf="!this.selectedFileName">
             <mat-icon aria-hidden="false" aria-label="Open File" >
                 file_open
             </mat-icon>
             <input #fileInput type="file" class="hidden" accept="*" (change)="fileChanged($event)" />
+        </button>
+        <button mat-icon-button aria-label="" matTooltip="Open File" (click)="fileRemoved()" *ngIf="this.selectedFileName">
+            <mat-icon aria-hidden="false" aria-label="Clear selected File" >
+                clear
+            </mat-icon>
         </button>
     </nav>
 </mat-toolbar>
