--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <nav class="navbar-header">
-        <span>Burp HTTP history viewer</span>
+        <span>Burp HTTP history browser</span>
 
         <span class="toolbar-spacer"></span>
         <span>{{ this.selectedFileName }}</span>
