--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -19,8 +19,26 @@ mat-toolbar {
   display: none;
 }
 
+::ng-deep .mat-progress-bar-fill::after {
+  background-color: currentColor
+}
+
+::ng-deep .mat-progress-bar-background,
+::ng-deep .mat-progress-bar-buffer {
+  background-color: rgb(226, 225, 223);
+}
+
 @media (prefers-color-scheme: dark) {
   mat-toolbar {
     background: rgb(29, 30, 32);
+  }
+
+  ::ng-deep .mat-progress-bar-fill::after {
+    background-color: currentColor
+  }
+
+  ::ng-deep .mat-progress-bar-background,
+  ::ng-deep .mat-progress-bar-buffer {
+    background-color: rgb(29, 30, 32);
   }
 }
