Add Styling to gutter Elements #3

--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -46,6 +46,16 @@ as-split > as-split-area > pre {
   text-overflow: ellipsis;
 }
 
+::ng-deep .as-split-gutter {
+  background-color: rgba(0, 0, 0, 0.12);
+}
+
+@media (prefers-color-scheme: dark) {
+  ::ng-deep .as-split-gutter {
+    background-color: rgba(255, 255, 255, 0.12);
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   .mat-table {
     background: 0;
