Manager lil bit of space

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <nav class="navbar-header">
-        <span>Burp HTTP history browser</span>
+        <span>BHHB</span>
         <a href="https://github.com/adityatelange/bhhb" mat-icon-button matTooltip="View Source on Github">
             <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                 class="mat-icon notranslate material-icons mat-icon-no-color">
