--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -102,12 +102,20 @@
     <as-split-area [size]="40" *ngIf="clickedRow">
         <as-split direction="horizontal" [gutterSize]=7>
             <as-split-area>
-                <div class="label">Request</div>
-                <pre>{{ clickedRow.request }}</pre>
+                <div class="label">
+                    <span>Request</span>
+                    <span class="toolbar-spacer"></span>
+                    <button [class.active]="wrapRequest" (click)="wrapRequest = !wrapRequest">Wrap</button>
+                </div>
+                <pre [class.wrapy]="wrapRequest">{{ clickedRow.request }}</pre>
             </as-split-area>
             <as-split-area>
-                <div class="label">Response</div>
-                <pre>{{ clickedRow.response }}</pre>
+                <div class="label">
+                    <span>Response</span>
+                    <span class="toolbar-spacer"></span>
+                    <button [class.active]="wrapResponse" (click)="wrapResponse = !wrapResponse">Wrap</button>
+                </div>
+                <pre [class.wrapy]="wrapResponse">{{ clickedRow.response }}</pre>
             </as-split-area>
         </as-split>
     </as-split-area>
