--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -75,7 +75,7 @@
                     <span class="toolbar-spacer"></span>
                     <button [class.active]="wrapRequest" (click)="wrapRequest = !wrapRequest">Wrap</button>
                 </div>
-                <pre [class.wrapy]="wrapRequest">{{ clickedRow.request }}</pre>
+                <div class="content" [class.wrapy]="wrapRequest">{{ clickedRow.request[0] }}<br><br>{{ clickedRow.request[1] }}</div>
             </as-split-area>
             <as-split-area>
                 <div class="label">
@@ -83,7 +83,7 @@
                     <span class="toolbar-spacer"></span>
                     <button [class.active]="wrapResponse" (click)="wrapResponse = !wrapResponse">Wrap</button>
                 </div>
-                <pre [class.wrapy]="wrapResponse">{{ clickedRow.response }}</pre>
+                <div class="content" [class.wrapy]="wrapResponse">{{ clickedRow.response[0] }}<br><br>{{ clickedRow.response[1] }}</div>
             </as-split-area>
         </as-split>
     </as-split-area>
