--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -75,7 +75,11 @@
                     <span class="toolbar-spacer"></span>
                     <button [class.active]="wrapRequest" (click)="wrapRequest = !wrapRequest">Wrap</button>
                 </div>
-                <div class="content" [class.wrapy]="wrapRequest">{{ clickedRow.request[0] }}<br><br>{{ clickedRow.request[1] }}</div>
+                <div class="content" [class.wrapy]="wrapRequest">
+                    <div id="req_headers">{{ clickedRow.request[0] }}</div>
+                    <br><br>
+                    <div id="req_body">{{ clickedRow.request[1] }}</div>
+                </div>
             </as-split-area>
             <as-split-area>
                 <div class="label">
@@ -83,7 +87,11 @@
                     <span class="toolbar-spacer"></span>
                     <button [class.active]="wrapResponse" (click)="wrapResponse = !wrapResponse">Wrap</button>
                 </div>
-                <div class="content" [class.wrapy]="wrapResponse">{{ clickedRow.response[0] }}<br><br>{{ clickedRow.response[1] }}</div>
+                <div class="content" [class.wrapy]="wrapResponse">
+                    <div id="res_headers">{{ clickedRow.response[0] }}</div>
+                    <br><br>
+                    <div id="res_body">{{ clickedRow.response[1] }}</div>
+                </div>
             </as-split-area>
         </as-split>
     </as-split-area>
