--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -26,6 +26,11 @@
                 <td mat-cell *matCellDef="let element" title="{{element.path}}"> {{element.path}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Title </th>
+                <td mat-cell *matCellDef="let element" title="{{element.title}}"> {{element.title}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Status </th>
                 <td mat-cell *matCellDef="let element" title="{{element.status}}"> {{element.status}} </td>
