Show page titles (#19)
* show page titles

* move title after extension column
where it is located in burpsuite by default

---------

Co-authored-by: dogeyoyo <dogeyoyo@home>
Co-authored-by: Aditya Telange <21258296+adityatelange@users.noreply.github.com>

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -47,6 +47,11 @@
                 <td mat-cell *matCellDef="let element" title="{{element.extension}}"> {{element.extension}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Title </th>
+                <td mat-cell *matCellDef="let element" title="{{element.title}}"> {{element.title}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="comment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag> Comment </th>
                 <td mat-cell *matCellDef="let element" title="{{element.comment}}"> {{element.comment}} </td>
