--- a/src/app/components/header/info-dialog.component.css
+++ b/src/app/components/header/info-dialog.component.css
@@ -56,7 +56,7 @@ ul {
 @media (prefers-color-scheme: dark) {
     ::ng-deep .mat-dialog-container {
         background-color: rgb(29, 30, 32);
-        color: initial;
+        color: inherit;
     }
 
     ::ng-deep .mat-dialog-container button {
